cambios en el html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Titulo del Documento</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum, accusantium. Aut autem obcaecati incidunt rerum
+        atque! Ratione natus aut aliquid ducimus accusantium, ab odio soluta quidem, rem pariatur modi eius.</p>
 </body>
 </html>
